# xsd-to-pydantic

./: LICENSE  Makefile  README.MD  pyproject.toml
.github/workflows/: code-quality-and-tests.yaml
tests/: test_xsd_converter.py
xsdtopydantic/: __init__.py  api.py  converter.py  utils.py  xsd.py
